--- a/SymPy_Symbolic_Mathematics_Python.ipynb
+++ b/SymPy_Symbolic_Mathematics_Python.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "SymPy Symbolic Mathematics Python 20191203 .ipynb",
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,26 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/gnsJhenJie/DataScience/blob/master/SymPy_Symbolic_Mathematics_Python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XUCWHTUfwayH",
+        "colab_type": "text"
+      },
+      "source": [
+        "# SymPy"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
