--- a/Matplotlib.ipynb
+++ b/Matplotlib.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Matplotlib.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -12,6 +13,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/gnsJhenJie/DataScience/blob/master/Matplotlib.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -63,7 +74,7 @@
         "colab_type": "text"
       },
       "source": [
-        "* x每 1 一點\n"
+        "### x每 1 一點\n"
       ]
     },
     {
@@ -85,16 +96,16 @@
       "metadata": {
         "id": "MgFtazvFxwDc",
         "colab_type": "code",
+        "outputId": "d0bd9690-a4c0-44b0-a3dd-225eaadb24ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "d0bd9690-a4c0-44b0-a3dd-225eaadb24ea"
+        }
       },
       "source": [
         "x"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -115,16 +126,16 @@
       "metadata": {
         "id": "DL6TChjZxxVK",
         "colab_type": "code",
+        "outputId": "6f573f1c-842e-443a-918e-e889a66090f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "6f573f1c-842e-443a-918e-e889a66090f0"
+        }
       },
       "source": [
         "y"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -146,17 +157,17 @@
       "metadata": {
         "id": "C9gXPTF9xx_e",
         "colab_type": "code",
+        "outputId": "af0ea0c8-d5c7-45cf-b667-42891ca28f20",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        },
-        "outputId": "af0ea0c8-d5c7-45cf-b667-42891ca28f20"
+        }
       },
       "source": [
         "plt.plot(x, y)\n",
         "plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -179,7 +190,7 @@
         "colab_type": "text"
       },
       "source": [
-        "* x每 0.1 一點"
+        "### x每 0.1 一點"
       ]
     },
     {
@@ -201,16 +212,16 @@
       "metadata": {
         "id": "D9x7NFsIw85o",
         "colab_type": "code",
+        "outputId": "b4a7e7c3-571b-4323-e01a-5afa60fb76dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "b4a7e7c3-571b-4323-e01a-5afa60fb76dc"
+        }
       },
       "source": [
         "x"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -235,16 +246,16 @@
       "metadata": {
         "id": "Z6wVIYFBw9zO",
         "colab_type": "code",
+        "outputId": "f7397de9-ebe0-466e-ecbb-4349a2277fb4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
-        },
-        "outputId": "f7397de9-ebe0-466e-ecbb-4349a2277fb4"
+        }
       },
       "source": [
         "y"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -276,17 +287,17 @@
       "metadata": {
         "id": "ZQW4bSC2w-iT",
         "colab_type": "code",
+        "outputId": "61025eb1-81d2-4c8c-c306-d831c8ddc9d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "61025eb1-81d2-4c8c-c306-d831c8ddc9d9"
+        }
       },
       "source": [
         "plt.plot(x, y)\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -359,11 +370,11 @@
       "metadata": {
         "id": "70bqZ_snyUbc",
         "colab_type": "code",
+        "outputId": "ebec3d29-7962-4d74-a512-36d4398e2be4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        },
-        "outputId": "ebec3d29-7962-4d74-a512-36d4398e2be4"
+        }
       },
       "source": [
         "plt.plot(x, y1, label=\"sin\", color=\"m\")\n",
@@ -374,7 +385,7 @@
         "plt.legend() #顯示label\n",
         "plt.show()"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -405,11 +416,11 @@
       "metadata": {
         "id": "PIweuKXc552k",
         "colab_type": "code",
+        "outputId": "3ecd46f9-99da-40f5-c818-f537e9b3d3c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
-        },
-        "outputId": "3ecd46f9-99da-40f5-c818-f537e9b3d3c7"
+        }
       },
       "source": [
         "a = [1, 2, 3, 4, 5]\n",
@@ -417,7 +428,7 @@
         "plt.plot(a, b)\n",
         "plt.plot(a, b, '*')"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -470,16 +481,16 @@
       "metadata": {
         "id": "wlGjBu5p4CYL",
         "colab_type": "code",
+        "outputId": "c9f6fdec-b783-41e8-a7e2-5291264675bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c9f6fdec-b783-41e8-a7e2-5291264675bf"
+        }
       },
       "source": [
         "fig = plt.figure()"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -509,11 +520,11 @@
       "metadata": {
         "id": "n5oUGc9-yWJH",
         "colab_type": "code",
+        "outputId": "74c89604-1796-42a5-e542-0816aa998a10",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        },
-        "outputId": "74c89604-1796-42a5-e542-0816aa998a10"
+        }
       },
       "source": [
         "ax1 = fig.add_subplot(2, 2, 1)\n",
@@ -521,7 +532,7 @@
         "ax3 = fig.add_subplot(2, 2, 3)\n",
         "fig"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -543,16 +554,16 @@
       "metadata": {
         "id": "6UHuGpWi4EBc",
         "colab_type": "code",
+        "outputId": "fe5698c3-be2c-4386-dc52-571b40dd1964",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
-        },
-        "outputId": "fe5698c3-be2c-4386-dc52-571b40dd1964"
+        }
       },
       "source": [
         "plt.plot()"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -585,18 +596,18 @@
       "metadata": {
         "id": "aWG1ck5f4fh7",
         "colab_type": "code",
+        "outputId": "95fdc9a7-3e06-4b1a-905b-cf832e80be58",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "95fdc9a7-3e06-4b1a-905b-cf832e80be58"
+        }
       },
       "source": [
-        "_ = ax1.hist(np.random.randn(100), bins=20, color='k', alpha=0.3)\n",
-        "ax2.scatter(np.arange(30), np.arange(30) + 3 * np.random.randn(30))\n",
-        "ax3.scatter(np.arange(30), np.arange(30) - 3 * np.random.randn(30), color = \"g\")"
+        "_ = ax1.hist(np.random.randn(100), bins=20, color='k', alpha=0.3) #直方圖\n",
+        "ax2.scatter(np.arange(30), np.arange(30) + 3 * np.random.randn(30)) #點圖\n",
+        "ax3.scatter(np.arange(30), np.arange(30) - 3 * np.random.randn(30), color = \"g\") #點圖"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -617,16 +628,16 @@
       "metadata": {
         "id": "61-HvTJ64nYK",
         "colab_type": "code",
+        "outputId": "4b08af12-cafe-46c4-9e5d-2d4104baa636",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "4b08af12-cafe-46c4-9e5d-2d4104baa636"
+        }
       },
       "source": [
         "fig\n"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -642,19 +653,6 @@
           "execution_count": 25
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ApB4mvwj67ol",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
