--- a/AI/Neural_network_scikit_learn.ipynb
+++ b/AI/Neural_network_scikit_learn.ipynb
@@ -45,7 +45,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Machine Learning Basics 分類問題\n",
+        "## Machine Learning Basics - Classification\n",
         "https://github.com/zotroneneis/machine_learning_basics/blob/master/perceptron.ipynb"
       ]
     },
