--- a/NumPy.ipynb
+++ b/NumPy.ipynb
@@ -181,9 +181,9 @@
         }
       },
       "source": [
-        "x = np.arange(5)  #整數\n",
+        "x = np.arange(5)  #Integer\n",
         "print (x) \n",
-        "x = np.arange(5, dtype =  float)  #浮點數\n",
+        "x = np.arange(5, dtype =  float)  #Float\n",
         "print (x) "
       ],
       "execution_count": 0,
@@ -199,6 +199,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RDZXMPLEwLks",
+        "colab_type": "text"
+      },
+      "source": [
+        "np.linspace 一維等差數列陣列"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "3yZvfBT3qqZj",
@@ -210,7 +220,6 @@
         }
       },
       "source": [
-        "#  numpy.linspace 函數用於創建一個一維陣列，陣列是一個等差數列構成的\n",
         "#  np.linspace(start, stop, \n",
         "#       num=50, endpoint=True, retstep=False, dtype=None)\n",
         "\n",
@@ -251,7 +260,7 @@
         "colab_type": "text"
       },
       "source": [
-        "* 等比數列"
+        "np.logspace 等比數列"
       ]
     },
     {
