--- a/NumPy.ipynb
+++ b/NumPy.ipynb
@@ -260,7 +260,7 @@
         "colab_type": "text"
       },
       "source": [
-        "np.logspace 等比數列"
+        "np.logspace 一維等比數列陣列"
       ]
     },
     {
